Bug 362620 - No recovery from invalid activities
Summary: No recovery from invalid activities
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: activities (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Ivan Čukić
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-05-03 12:06 UTC by Philipp A.
Modified: 2016-08-12 12:21 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Philipp A. 2016-05-03 12:06:39 UTC
After removing an activity and starting an application that used to be forced to be on it, the application stayed there. removing the rule and restarting the application didn’t help.

With no menu to select an activity for it, i had to use xprop to remove the _NET_KDE_ACTIVITY (or so) prop.

if an application gets assigned to an activity (ID) which doesn’t exist, i expect it to be reassigned to an existing one no matter what.

PS: there’s also a bug in this bug tracker: i filed this for the “Activity Switcher” component, because its description says: “All other activity related things should be in kactivities”, which doesn’t exist as selectable product or component

Reproducible: Always
Comment 1 Ivan Čukić 2016-07-18 11:38:38 UTC
> i filed this for the “Activity Switcher” component

Activities are spread around in different products unfortunately - Plasma, KWin, and Activity Manager. This is a KWin issue related to activities, so the product is KWin and component is 'activities'. Fun, right? :)

Thanks for reporting this.
Comment 2 David Edmundson 2016-08-12 12:21:23 UTC
Git commit 0dd927c4a47db668b30fa92d430046539e45ef24 by David Edmundson.
Committed on 12/08/2016 at 12:19.
Pushed by davidedmundson into branch 'master'.

Validate activities in setOnActivities

Summary:
This fixes a bug I had where Session Management restored a window on an
activity that didn't exist that, meaning I was unable to access it.

setOnActivity() already has this check

Test Plan:
Using my broken session, restored and got my ghost process back
on all activities

Added a window to activity 2, checked it came back there and
only there.

Reviewers: #plasma, graesslin

Subscribers: ivan, luebking, graesslin, kwin

Tags: #kwin

Differential Revision: https://phabricator.kde.org/D1982

M  +10   -0    client.cpp

http://commits.kde.org/kwin/0dd927c4a47db668b30fa92d430046539e45ef24